# s3-prefix-downloader

./: .env.example  .gitignore  README.md  download.py  main.py  prefixes.txt  pyproject.toml
